# melty-logger

./: Cargo.toml  Config.toml  notes.md  test_config.toml
src/: character.rs  config.rs  gameaddr.rs  main.rs  ui.rs
src/client/: manager.rs  mod.rs  state.rs
src/game/: character.rs  mod.rs  state.rs
src/memory/: addresses.rs  manager.rs  mod.rs
src/validation/: mod.rs  result.rs  validator.rs
