[package]
name = "atlas-observer"
version = "0.1.0"
edition = "2024"

[dependencies]
num_enum = "0.7.5"
rand = "0.10.0"
sysinfo = "0.38.3"
thiserror = "2.0.18"
uuid = {version="1.22.0", features = ["v4"]}
reqwest = { version="0.13.2", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus"
] }
toml = "1.0.6"
